--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -242,8 +242,10 @@
 16. 解析 html内容
 
     [在 Android 应用中使用 HTML Parser 便捷的解析 html 内容](https://www.ibm.com/developerworks/cn/opensource/os-cn-android-hp/index.html)
+    
+17. Java 中字符串 String switch 的实现原理
 
-
+    [Java中字符串String Switch的实现原理](https://blog.csdn.net/MOLIILOM/article/details/51166697)
 
 
 
