--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -246,6 +246,8 @@
 17. Java 中字符串 String switch 的实现原理
 
     [Java中字符串String Switch的实现原理](https://blog.csdn.net/MOLIILOM/article/details/51166697)
+    
+18. Java 线程的创建
 
 
 
