--- a/DataStructure/算法/排序算法/排序算法.md
+++ b/DataStructure/算法/排序算法/排序算法.md
@@ -4,6 +4,8 @@
 
 ## 参考文章
 
+1. [Java实现八大排序算法](https://www.cnblogs.com/morethink/p/8419151.html)
+
 1. [从零开始学数据结构和算法(一)冒泡与选择排序](https://juejin.im/post/5c9442cb5188252da9013153)
 4. [从零开始学数据结构和算法 (五) 分治法 (二分查找、快速排序、归并排序)](https://juejin.im/post/5c945c245188252d863cc969)
 7. [常见数据结构与算法整理总结（下）](https://www.jianshu.com/p/42f81846c0fb)
