--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -117,9 +117,14 @@
 ### 2020 年 5 月
 
 1. View 整理
-2. 绘画 1 张
+2. 绘画 5 张
 3. 运动 9 天
 4. 缓存机制
+5. java 面试题1
+6. 两个算法题
+7. 计算机网络基础
+8. Socket
+9. 
 
 
 
