--- a/Android/view/事件分发机制.md
+++ b/Android/view/事件分发机制.md
@@ -1,6 +1,131 @@
 # 事件分发机制
 
-　　事件分发机制
+　　如果想给按钮注册一个点击事件，只需要调用：
+
+```java
+button.setOnClickListener(new OnClickListener() {
+	@Override
+	public void onClick(View v) {
+		Log.d("TAG", "onClick execute");
+	}
+});
+```
+
+　　这样在 onClick 方法里面写实现，就可以在按钮被点击的时候执行。
+
+　　如果想给这个按钮再添加一个 touch 事件，只需要调用:
+
+```java
+button.setOnTouchListener(new OnTouchListener() {
+	@Override
+	public boolean onTouch(View v, MotionEvent event) {
+		Log.d("TAG", "onTouch execute, action " + event.getAction());
+		return false;
+	}
+});
+```
+
+　　onTouch 方法里能做的事情比 onClick 要多一些，比如判断手指按下、抬起、移动等事件。
+
+　　那么如果两个事件都注册了，onTouch 是优先于 onClick 执行的，并且 onTouch 执行了两次，一次是 ACTION_DOWN，一次是 ACTION_UO。因此事件传递的顺序是先经过 onTouch，再传递给 onClick。
+
+　　onTouch 方法时候返回值的，如果把 onTouch 方法里的返回值改成 true，onClick 方法不再执行了。
+
+## 源码分析
+
+　　只要触摸到了任何一个控件，就一定会调用该控件的 dispatchTouchEvent 方法。当去点击按钮的时候，就会去调用 Button 类里的 dispatchTouchEvent 方法，其实调用的是 View 里的 dispatchToucheEvent 方法。
+
+### 1. View#dispatchTouchEvent
+
+```java
+    /**
+     * Pass the touch screen motion event down to the target view, or this
+     * view if it is the target.
+     *
+     * @param event The motion event to be dispatched.
+     * @return True if the event was handled by the view, false otherwise.
+     */
+    public boolean dispatchTouchEvent(MotionEvent event) {
+        // If the event should be handled by accessibility focus first.
+        if (event.isTargetAccessibilityFocus()) {
+            // We don't have focus or no virtual descendant has it, do not handle the event.
+            if (!isAccessibilityFocusedViewOrHost()) {
+                return false;
+            }
+            // We have focus and got the event, then use normal event dispatch.
+            event.setTargetAccessibilityFocus(false);
+        }
+
+        boolean result = false;
+
+        if (mInputEventConsistencyVerifier != null) {
+            mInputEventConsistencyVerifier.onTouchEvent(event, 0);
+        }
+
+        final int actionMasked = event.getActionMasked();
+        if (actionMasked == MotionEvent.ACTION_DOWN) {
+            // Defensive cleanup for new gesture
+            stopNestedScroll();
+        }
+
+        if (onFilterTouchEventForSecurity(event)) {
+            if ((mViewFlags & ENABLED_MASK) == ENABLED && handleScrollBarDragging(event)) {
+                result = true;
+            }
+            //noinspection SimplifiableIfStatement
+            ListenerInfo li = mListenerInfo;
+            if (li != null && li.mOnTouchListener != null
+                    && (mViewFlags & ENABLED_MASK) == ENABLED
+                	// 调用 li.mOnTouchListener.onTouch 方法
+                    && li.mOnTouchListener.onTouch(this, event)) {
+                result = true;
+            }
+			// 调用 onTouchEvent 方法
+            if (!result && onTouchEvent(event)) {
+                result = true;
+            }
+        }
+
+        if (!result && mInputEventConsistencyVerifier != null) {
+            mInputEventConsistencyVerifier.onUnhandledEvent(event, 0);
+        }
+
+        // Clean up after nested scrolls if this is the end of a gesture;
+        // also cancel it if we tried an ACTION_DOWN but we didn't want the rest
+        // of the gesture.
+        if (actionMasked == MotionEvent.ACTION_UP ||
+                actionMasked == MotionEvent.ACTION_CANCEL ||
+                (actionMasked == MotionEvent.ACTION_DOWN && !result)) {
+            stopNestedScroll();
+        }
+
+        return result;
+    }
+```
+
+　　在 View 的 dispatchTouchEvent 方法内，会进行一个判断，如果 if (li != null && li.mOnTouchListener != null && (mViewFlags & ENABLED_MASK) == ENABLED && li.mOnTouchListener.onTouch(this, event)) 为 true，则返回 true，否则就会执行 onTouchEvent(event) 方法，如果 onTouchEvent(event) 返回的是 true，则返回 true。
+
+　　而判断中的 li 是一个 ListenerInfo 对象，而  li.mOnTouchListener 是一个 OnTouchListener 对象，是在 View 的 setTouchEvent() 方法中设置的：
+
+```java
+    /**
+     * Register a callback to be invoked when a touch event is sent to this view.
+     * @param l the touch listener to attach to this view
+     */
+    public void setOnTouchListener(OnTouchListener l) {
+        getListenerInfo().mOnTouchListener = l;
+    }
+
+    ListenerInfo getListenerInfo() {
+        if (mListenerInfo != null) {
+            return mListenerInfo;
+        }
+        mListenerInfo = new ListenerInfo();
+        return mListenerInfo;
+    }
+```
+
+　　也就是说只要给控件注册了 touch 事件，mListenerInfo 被初始化了，mOnTouchListener 也被赋值了，
 
 
 
