移除数据实现

--- a/LeetCode/移除元素.md
+++ b/LeetCode/移除元素.md
@@ -49,23 +49,50 @@ for (int i = 0; i < len; i++) {
 
 ## 解决
 
-1. 解决方法一：通过移动数组的形式来完成。如果遇到要移除的数据，则将后面的数字向前平移，这样就将需要移除的数据清除了。
-2. 解决方法二：通过交换数据的形式来完成。使用两个指标分别从数组的头和尾，从头找需要移除的数据，从尾向头找不是移除的数据，然后将尾找到的数据赋值到头找到的位置。
+1. 解决方法一：通过移动数组的形式来完成。如果遇到要移除的数据，则将后面的数字向前平移，这样就将需要移除的数据清除了。时间复杂度 O（n^2）。
+2. 解决方法二：通过交换数据的形式来完成。使用两个指标分别从数组的头和尾开始，从头找需要移除的数据，从尾向头找不是移除的数据，然后将尾找到的数据赋值到头找到的位置。时间复杂度为 O(logn)。
 
 ### 1. 方法一实现代码
 
 ```java
-public int removeElement(int[] nums, int val) {
-
-}
+    public int removeElement(int[] nums, int val) {
+        int length = nums.length;
+        for (int i = 0; i<length;i++){
+            if (nums[i] == val){
+                int k = i;
+                for (int j = k+1;j<length;j++){
+                    nums[k] = nums[j];
+                    k++;
+                }
+                length--;
+            }
+        }
+        return length;
+    }
 ```
 
 ### 2. 方法二实现代码
 
 ```java
-public int removeElement(int[] nums, int val) {
-
-}
+    public int removeElement(int[] nums, int val) {
+        int i = 0,j = nums.length-1;
+        while(i<=j){
+            while(i<=j&& nums[i] != val){
+                i++;
+            }
+            while(i<=j&&nums[j]==val){
+                j--;
+            }
+            System.out.println("i:"+i+"j:"+j);
+            if (i<j){
+                nums[i] = nums[j];
+                nums[j]=val;
+                i++;
+                j--;
+            }
+        }
+        return j+1;
+    }
 ```
 
 
