网络常见问题

--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -112,19 +112,25 @@
 11. 优化
 12. PMS 启动解析
 
-
-
 ### 2020 年 5 月
 
 1. View 整理
-2. 绘画 5 张
-3. 运动 9 天
+2. 绘画 10 张
+3. 运动 22 天
 4. 缓存机制
 5. java 面试题1
-6. 两个算法题
+6. 3 个算法题
 7. 计算机网络基础
 8. Socket
-9. 
+9. TCP 和 UDP
+10. HTTPS
+
+### 2020 年 6 月
+
+1. 1 个 Java 文件问题
+2. 运动  天
+3. 绘画 天
+4. 
 
 
 
@@ -177,10 +183,10 @@
    * OkHttp - 已完成
    * RabbitMQ - 已完成
 3. 网络
-   * 计算机网络知识基础
-   * HTTPS - 应用层协议
-   * TCP与UDP - 传输层协议
-   * Socket
+   * 计算机网络知识基础 - 已完成
+   * HTTPS - 应用层协议 - 已完成
+   * TCP与UDP - 传输层协议 - 已完成
+   * Socket - 已完成
 4. Java
    * 线程
    * hashCode
@@ -255,6 +261,14 @@
 18. Java 线程的创建
 
 19. Java 数据类型
+
+20. java 读写文件的几种方式
+
+21. ip 协议
+
+22. ipv4 和 ipv6
+
+23. 常见的网络攻击方式
 
 
 
