--- a/network/网络常见问题.md
+++ b/network/网络常见问题.md
@@ -133,19 +133,51 @@ https://www.cnblogs.com/amingxiansen/p/9072115.html
 
 #### 7.1. 域名解析
 
+以 Chrome 浏览器为例，Chrome 会解析域名对应的 IP 地址。
+
+1. Chrome 浏览器会首先搜索浏览器自身的 DNS 缓存（可以使用 chrome://net-internals/#dns 来进行查看），浏览器自身的 DNS 缓存有效期比较短，且容纳有限，大概是 1000 条。如果自身的缓存中存在 blog.csdn.net 对应的 IP 地址并且没有过期，则解析成功。
+2. 如果 1 中未找到，那么 Chrome 会搜索操作系统自身的 DNS 缓存（可以在命令行下使用 ipconfig /displaydns 查看）。如果找到且没有过期则成功。
+3. 如果 2 中未找到，那么尝试读取位于 C:\Windows\System32\drivers\etc 下的 hosts 文件，如果找到对应的 IP 地址则解析成功。
+4. 如果 3 中未找到。浏览器首先会找 TCP/IP 参数中设置的本地 DNS 服务器，如果要查询的域名包含在本地配置的区域资源中，则完成域名解析，否则根据本地 DNS 服务器会请求根 DNS 服务器。
+5. 本地 DNS 会把请求发至 13 台根 DNS，根 DNS 服务器收到请求后会返回负责这个域名（.net）的服务器的一个 IP，本地 DNS 服务器使用该 IP 信息联系负责 .net 域的这要服务器。这台负责 .net 域的服务器收到请求后，如果自己无法解析，会返回 .net 域的下一级 DNS 服务器地址（blog.csdn.net）给本地 DNS 服务器。以此类推，直至找到。
+
 #### 7.2. TCP 的三次握手
 
-
+HTTP 是基于 TCP 的，在传送数据之前会通过三次握手浏览器和服务器建立建立。
 
 #### 7.3. 建立 TCP 连接后发起 HTTP 请求
 
+TCP 三次握手建立连接成功后，客户端按照指定的格式开始向服务端发送 HTTP 请求，服务端接收请求后，解析 HTTP 请求，处理完业务逻辑，最后返回一个具有标准格式的 HTTP 响应给客户端。
 
+##### 7.3.1. HTTP 请求格式
+
+HTTP 请求格式由四部分组成，分别是请求行、请求头、空行、消息体，每部分内容占一行。
+
+请求行：由三部分组成，分别是请求方法（GET/POST/DELETE/PUT/HEAD）、URI 路径、HTTP 版本号。
+
+请求头：缓存相关信息（Cache-Control，If-Modified-Since）、客户端身份信息（User-Agent）等键值对信息。
+
+空行。
+
+主体：客户端发给服务端的请求数据，这部分数据并不是每个请求必须的。
+
+##### 7.3.2. 服务器响应 HTTP 请求
+
+服务器接收处理完请求后返回一个 HTTP 响应消息给客户端。HTTP 响应消息的格式包括：状态行、响应头、空行、消息体。每部分那些占一行。
+
+状态行：有 HTTP 协议版本号、状态码和状态说明三部分构成。
+
+响应头：用于说明数据的一些信息，比如数据类型、内容长度等键值对。
+
+空行。
+
+消息体：服务端返回给客户端的 HTML 文本内容，或者其他格式的数据，比如：视频流、图片或者音频数据。
 
 #### 7.4. 浏览器解析 html 代码，并请求 html 代码中的资源
 
+浏览器拿到 html 文件后，就开始解析其中的 html 代码，遇到 js/css/image 等静态资源时，向服务器发起一个 HTTP 请求，如果服务器端返回 304 状态吗（告诉浏览器服务器端没有修改该资源），那么浏览器会直接读取本地的该资源的缓存文件。否则开启新线程向服务器端区请求下载。
 
-
-
+最后，浏览器利用自己内部的工作机制，把请求到的静态资源和 html 代码进行渲染，再呈现给用户。
 
 ### 8. HTTP 是无状态的？为什么无状态？有什么意义？
 
