--- a/Java/基础/进程知识.md
+++ b/Java/基础/进程知识.md
@@ -3,7 +3,7 @@
 ## 基本知识
 　　**进程（Process）**是计算机中的程序关于某数据集合上的一次运行活动，是系统进行资源分配和调度的基本单位，是操作系统结构的基础。在当代面向线程设计的计算机结构中，进程是线程的容器。程序是指令、数据及其组织形式的描述，进程是程序的实体。是计算机中的程序关于某数据集合上的一次运行活动，是系统进行资源分配和调度的基本单位，是操作系统结构的基础。程序是指令、数据及其组织形式的描述，进程是程序的实体。
 
-![](J:/zhangmiao/android_learning_notes/Java/image/进程.png)
+![](image/进程.png)
 
 ##### 6.4.1.1. 内存
 
