--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -270,7 +270,16 @@
 
 23. 常见的网络攻击方式
 
+24. 泛型
+
+25. 反射
+
+26. 代理
+
+27. 注解
+
 
 
 [这是一份面向Android开发者的复习指南](https://www.jianshu.com/p/b3c1b9c6dd40)
 
+https://www.jianshu.com/p/a8f7048a1575 面试题
