--- a/network/常见的网络攻击类型.md
+++ b/network/常见的网络攻击类型.md
@@ -11,7 +11,7 @@
 
 ### 1.1. 攻击描述
 
-　　DOS 攻击通过协议方式，或抓住系统漏洞，借助代理服务器模拟多个用户不停的对网站进行访问请求，集中对目标进行网络攻击，让目标计算机或网络无法提供正常的服务或资源访问，使目标系统服务系统停止响应甚至崩溃，例如疯狂 Ping 攻击。
+　　DOS 攻击通过协议方式或抓住系统漏洞，借助代理服务器模拟多个用户不停的对网站进行访问请求，集中对目标进行网络攻击，让目标计算机或网络无法提供正常的服务或资源访问，使目标系统服务系统停止响应甚至崩溃，例如疯狂 Ping 攻击。
 
 ### 1.2. 危害说明
 
@@ -22,7 +22,7 @@
 1. 扩展访问列表是防止 DOS 攻击的有效工具，例如 Show IP access-list。
 2. 让路由器具备 TCP 拦截功能，在对方发送数据流时可以很好的监控和拦截。
 3. 防止 DOS 攻击的根本是利用设备规则来合理的屏蔽持续的、高频度的数据冲击。
-4. 对用户操作进行记录，高于一定频率则禁封访问 ip。
+4. 对用户操作进行记录，高于一定频率则禁封访问 IP。
 
 ## 2. ARP 攻击
 
@@ -40,13 +40,13 @@
 
 1. 安装 ARP 防火墙：360 安全卫士（内置）、金山贝壳 ARP 专杀、金山卫士。
 2. 安装专门的杀毒软件：利用局域网 ARP 欺骗检测工具来确定 ARP 攻击源，然后利用 ARP 专杀工具进行杀毒。
-3. 通过 “网络参数” - “LAN口参数” 来查找路由器的 MAC 地址和 IP 地址，在局域网中的每台电脑中实现静态 ARP 绑定。
+3. 通过 “ 网络参数 ” - “ LAN 口参数 ” 来查找路由器的 MAC 地址和 IP 地址，在局域网中的每台电脑中实现静态 ARP 绑定。
 
 ## 3. XSS 攻击
 
 ### 3.1. 攻击描述
 
-　　攻击者通过在链接中插入恶意代码，用户一旦点开链接，攻击者能够盗取用户信息。攻击者通常会用十六进制链接编码，提供可信度。网站在接收到包含而已代码的请求之后会产生一个看似合法实则包含恶意代码的页面。
+　　攻击者通过在链接中插入恶意代码，用户一旦点开链接，攻击者能够盗取用户信息。攻击者通常会用十六进制链接编码，提供可信度。网站在接收到包含恶意代码的请求之后会产生一个看似合法实则包含恶意代码的页面。
 
 ### 3.2. 危害说明
 
@@ -80,7 +80,7 @@
 
 ### 5.1. 攻击描述
 
-　　通过攻击域名解析服务器（DNS），或伪造域名解析服务器（DNS）的方法，把目标网站域名解析到错误的地址，使得域名被盗或 DNS 域名劫持，主要用来阻止用户访问某些特定的网站，或者是将用户引导到广告页面。
+　　通过攻击域名解析服务器（DNS）或伪造域名解析服务器（DNS）的方法，把目标网站域名解析到错误的地址，使得域名被盗或 DNS 域名劫持，主要用来阻止用户访问某些特定的网站或者是将用户引导到广告页面。
 
 ### 5.2. 危害说明
 
@@ -107,7 +107,7 @@
 ### 6.3. 处理方式
 
 1. 探测网卡是否处于混杂模式；通过防火墙，实时观看目前网络带宽的分布情况。
-2. 数据加密技术：对账号、口令和那些敏感数据进行加密传输，网站中使用 https 最好。
+2. 数据加密技术：对账号、口令和那些敏感数据进行加密传输，网站中使用 HTTPS 最好。
 3. 使用安全拓扑结构，但开销很大。
 
 ## 7. 病毒攻击
