注解与代理

--- a/network/网络常见问题.md
+++ b/network/网络常见问题.md
@@ -30,7 +30,53 @@
 
 ### 3. IPv4 和 IPv6 的区别，特点
 
-　　
+　　IPv4 和 IPv6 都属于 “互联网协议”。
+
+　　IP 地址有两个标准：IP 版本 4（IPv4）和 IP 版本 6（IPv6）。所有有 IP 地址的计算机都有 IPv4 地址，许多及玄机也开始使用新的 IPv6 地址系统。
+
+　　IPv4 是互联网协议（Internet Protocol，IP）的第四版。IPv6 是 互联网协议（Internet Protocol，IP）的第六版，IPv6 是 IETF（互联网工作任务组，Internet Engineering Task Force）设计的用于替代现行版本 IP 协议（IPv4）的下一代 IP 协议。
+
+　　IPv4 头结构：
+
+![](image/ipv4头结构.jpg)
+
+　　IPv6 头结构：
+
+![](image/ipv6头结构.png)
+
+#### 3.1. IPv4 和 IPv6 头部对比
+
+![](image/ipv6与ipv4头部对比.png)
+
+![](image/ipv4与ipv6的报头信息对比.png)
+
+#### 3.2. IPv4 和 IPv6 的区别 
+
+1. IPv6 的地址空间更大。
+
+   （1）IPv4 中规定 IP 地址长度为 32，即有 2^32 -1 个地址。
+
+   （2）IPv6 中 IP 地址的长度为 128，即有 2^128 -1 个地址。
+
+2. IPv6 的路由表更小。
+
+   IPv6 的地址一开始就遵循聚类（Aggregation）的原则，这可使路由器能在路由表中，用一条记录标识一片子网。大大减少了路由器中路由表的长度，提高了路由器转发数据包的速度。
+
+3. IPv6 增强了组播（Multicast）支持以及对流的控制（Flow Control）。
+
+   这使得网络上的多媒体应用有了长足发展的机会，为服务质量控制（Qos，Quality of Service）提供了良好的网络平台。
+
+4. IPv6 加入了对自动配置（Auto Configuration）的支持。
+
+   这是对 DHCP 协议的改进和扩展，使得网络（尤其是局域网）的管理更加方便和快捷。
+
+5. IPv6 具有更高的安全性。
+
+   在使用 IPv6 网络中，用户可以对网络层的数据进行加密并对 IP 报文进行校验，这极大地增强了网络安全。
+
+6. IP6 允许协议扩充。
+
+7. IPv6 使用新的头部格式，简化和加速了路由选择过程，因为大多数的现象不需要由路由选择。
 
 ### 4. TCP 三次握手和四次挥手
 
