--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -130,7 +130,10 @@
 1. 1 个 Java 文件问题
 2. 运动  天
 3. 绘画 天
-4. 
+4. IP 协议
+5. ipv4 和 ipv6
+6. 常见的网络攻击方式
+7. 
 
 
 
@@ -187,6 +190,9 @@
    * HTTPS - 应用层协议 - 已完成
    * TCP与UDP - 传输层协议 - 已完成
    * Socket - 已完成
+   * ip 协议 - 已完成
+   * ipv4 和 ipv6 - 已完成
+   * 常见的网络攻击方式 - 已完成
 4. Java
    * 线程
    * hashCode
@@ -197,6 +203,7 @@
    * ReentrantLock
    * Condition
    * 动态代理类 Proxy
+   * CurrentHashMap
    * threadLocal原理 - 已完成
    * volatile - 数据从主内存直接获取 - 已完成
    * synchronized - 同步 - 已完成
@@ -263,12 +270,6 @@
 19. Java 数据类型
 
 20. java 读写文件的几种方式
-
-21. ip 协议
-
-22. ipv4 和 ipv6
-
-23. 常见的网络攻击方式
 
 24. 泛型
 
