--- a/DataStructure/数据结构/树/二叉树.md
+++ b/DataStructure/数据结构/树/二叉树.md
@@ -64,11 +64,367 @@ typedef struct BTNode{
 
 ![](image/二叉树的三叉链表.png)
 
+### 二叉树的顺序存储
+
+　　下面用数组实现一个简单的二叉树：
+
+```java
+/**
+ * 二叉树的顺序存储
+ *
+ * @param <T>
+ */
+public class ArrayBinaryTree<T> {
+    public static final int DEFAULT_DEEP = 5;
+    private int deep; // 深度
+    private int capacity; // 得知深度的情况下，最大的容量，即节点个数
+    private Object[] nodes; // 数据存储
+
+    public ArrayBinaryTree() {
+        this(DEFAULT_DEEP);
+    }
+
+    public ArrayBinaryTree(int deep) {
+        this.deep = deep;
+        nodes = new Object[capacity = (int) Math.pow(2, deep) - 1];
+    }
+
+    public ArrayBinaryTree(int deep, T rootData) {
+        this(deep);
+        nodes[0] = rootData;
+    }
+
+    public void add(int parentIndex, T data, boolean left) {
+        if (data == null) {
+            throw new NullPointerException();
+        }
+        if (nodes[parentIndex] == null) {
+            throw new NoSuchElementException();
+        }
+        if (left) {
+            nodes[parentIndex * 2 + 1] = data;
+        } else {
+            nodes[parentIndex * 2 + 2] = data;
+        }
+    }
+
+    public boolean isEmpty() {
+        return nodes[0] == null;
+    }
+
+    /**
+     * 获取索引为 index 节点的父节点
+     * @param index
+     * @return
+     */
+    public T getParent(int index) {
+        if (index == 0) {
+            return null;
+        }
+        return (T) nodes[(index - 1) / 2];
+    }
+
+    /**
+     * 获取索引为 index 的右节点
+     * @param index
+     * @return
+     */
+    public T getRight(int index) {
+        if (2 * index + 1 >= capacity) {
+            return null;
+        }
+        return (T) nodes[index * 2 + 2];
+    }
+
+    /**
+     * 获取索引为 index 的左节点
+     * @param index
+     * @return
+     */
+    public T getLeft(int index) {
+        if (2 * index + 1 >= capacity) {
+            return null;
+        }
+        return (T) nodes[2 * index + 1];
+    }
+
+    public T getRoot() {
+        return (T) nodes[0];
+    }
+
+    public int indexOf(T data) {
+        for (int i = 0; i < capacity; i++) {
+            if (nodes[i].equals(data)) {
+                return i;
+            }
+        }
+        return -1;
+    }
+
+    public void showTree() {
+        System.out.println("nodes:" + Arrays.toString(nodes));
+    }
+}
+```
+
+### 二叉树的链式存储
+
+```java
+public class TwoLinkedBinaryTree<T> {
+    class Node {
+        Object data;
+        Node left;
+        Node right;
+
+        public Node() {
+
+        }
+
+        public Node(Object data) {
+            this.data = data;
+        }
+
+        public Node(Object data, Node left, Node right) {
+            this.data = data;
+            this.left = left;
+            this.right = right;
+        }
+
+        @Override
+        public String toString() {
+            return "Node{" +
+                    "data=" + data +
+                    '}';
+        }
+    }
+
+    public Node root;
+
+    public TwoLinkedBinaryTree() {
+        this.root = new Node();
+    }
+
+    public TwoLinkedBinaryTree(T data) {
+        this.root = new Node(data);
+    }
+
+    public Node addNode(Node parent, T data, boolean left) {
+        if (data == null) {
+            throw new NullPointerException();
+        }
+
+        if (parent == null) {
+            throw new IllegalStateException("节点为 null，不能添加子节点");
+        }
+        if (left && parent.left != null) {
+            throw new IllegalStateException(parent + " 节点已经存在左节点");
+        }
+        if (!left && parent.right != null) {
+            throw new IllegalStateException(parent + " 节点已经存在右节点");
+        }
+        Node node = new Node(data);
+        if (left) {
+            parent.left = node;
+        } else {
+            parent.right = node;
+        }
+        return node;
+    }
+
+    public boolean isEmpty() {
+        return root.data == null;
+    }
+
+    public T getLeft(Node parent) {
+        return parent == null ? null : (T) parent.left.data;
+    }
+
+    public T getRight(Node parent) {
+        return parent == null ? null : (T) parent.right.data;
+    }
+}
+```
+
+### 二叉树的三叉链表存储
+
+```java
+/**
+ * 二叉树的三叉链表存储
+ *
+ * @param <T>
+ */
+public class ThreeLinkedBinaryTree<T> {
+    class Node {
+        Object data;
+        Node parent;
+        Node left;
+        Node right;
+
+        public Node() {
+
+        }
+
+        public Node(Object data, Node parent) {
+            this.data = data;
+            this.parent = parent;
+        }
+
+        public Node(Object data, Node parent, Node left, Node right) {
+            this.data = data;
+            this.parent = parent;
+            this.left = left;
+            this.right = right;
+        }
+
+        @Override
+        public String toString() {
+            return "Node{" +
+                    "data=" + data + "parent=" + (parent == null ? "null" : parent.data) +
+                    '}';
+        }
+    }
+
+    public Node root;
+
+    public ThreeLinkedBinaryTree() {
+        this.root = new Node();
+    }
+
+    public ThreeLinkedBinaryTree(T data) {
+        this.root = new Node(data, null);
+    }
+
+    public Node addNode(Node parent, T data, boolean left) {
+        if (data == null) {
+            throw new NullPointerException();
+        }
+
+        if (parent == null) {
+            throw new IllegalStateException("节点为 null，不能添加子节点");
+        }
+        if (left && parent.left != null) {
+            throw new IllegalStateException(parent + " 节点已经存在左节点");
+        }
+        if (!left && parent.right != null) {
+            throw new IllegalStateException(parent + " 节点已经存在右节点");
+        }
+        Node node = new Node(data, parent);
+        if (left) {
+            parent.left = node;
+        } else {
+            parent.right = node;
+        }
+        return node;
+    }
+
+    public boolean isEmpty() {
+        return root.data == null;
+    }
+
+    public T getLeft(Node parent) {
+        return parent == null ? null : (T) parent.left.data;
+    }
+
+    public T getRight(Node parent) {
+        return parent == null ? null : (T) parent.right.data;
+    }
+}
+
+```
+
+
+
 ##  二叉树的遍历
 
-* 前序遍历
-* 中序遍历
-* 后序遍历
+　　树的遍历主要有两种，一种是深度优先遍历，一个是广度优先遍历。
+
+　　深度优先遍历又有三种：前序、中序、后序遍历。
+
+　　前序、中序、后序遍历区别在于访问节点的是前面访问还是中间访问还是后面访问。
+
+### 前序遍历
+
+```java
+    /**
+     * 前序遍历
+     *
+     * @param node
+     */
+    public void preoder(Node node) {
+        if (node == null) {
+            return;
+        }
+        System.out.print(node.data); // 前面访问节点
+        preoder(node.left);
+        preoder(node.right);
+    }
+```
+
+### 中序遍历
+
+```java
+    /**
+     * 中序遍历
+     *
+     * @param node
+     */
+    public void inorder(Node node) {
+        if (node == null) {
+            return;
+        }
+        inorder(node.left);
+        System.out.print(node.data);//中间访问节点
+        inorder(node.right);
+    }
+```
+
+### 后序遍历
+
+```java
+    /**
+     * 后序遍历
+     *
+     * @param node
+     */
+    public void postorder(Node node) {
+        if (node == null) {
+            return;
+        }
+        postorder(node.left);
+        postorder(node.right);
+        System.out.print(node.data);
+    }
+```
+
+### 广度优先遍历
+
+　　广度优先遍历也叫做按层遍历（一层一层的遍历节点）：
+
+```java
+    /**
+     * 广度优先遍历
+     * @param root
+     */
+    public void levelorder(Node root) {
+        if (root == null) {
+            return;
+        }
+        Deque<Node> queue = new ArrayDeque<>();
+        queue.addLast(root);
+        while (!queue.isEmpty()) {
+            Node node = queue.removeFirst();
+            System.out.print(node.data);
+            if (node.left != null) {
+                queue.addLast(node.left);
+            }
+            if (node.right != null) {
+                queue.addLast(node.right);
+            }
+        }
+    }
+```
+
+
 
 ##  构造二叉树
 
