--- a/Java/线程/死锁.md
+++ b/Java/线程/死锁.md
@@ -2,12 +2,17 @@
 
 　　死锁是这样一种情形：多个线程同时阻塞，它们中的一个或者全部都在等待某个资源被释放，由于线程被无限期地阻塞，因此程序不可能正常终止。
 
+　　死锁是指多个进程循环等待彼此占用的资源而无限期的僵持等待下去的局面。原因是：
+
+1. 系统提供的资源太少了，远不能满足并发进程对资源的需求。
+2. 进程推进顺序不合适，互相占用彼此需要的资源，同时请求对方占用的资源，往往是程序设计不合理。
+
 ## java 死锁产生的四个必要条件
 
-1. 互斥使用，即当资源被一个线程使用（占用）时，别的线程不能被使用。
-2. 不可抢占，资源请求者不能强制从资源占用者手中夺取资源，资源只能由资源占用者主动释放。
-3. 请求和保持，即当资源请求者在请求其他的资源的同时保持对原有资源的占用。
-4. 循环等待，即存在一个等待队列，P1 占用 P2 的资源，P2 占用 P3 的资源，P3 占用 P1 的资源。这样就形成了一个等待环路。
+1. 互斥条件：即当资源被一个线程使用（占用）时，别的线程不能被使用。即某个资源在一段时间内只能由一个进程占用，不能同时被两个或两个以上的进程占用。
+2. 不可抢占条件：资源请求者不能强制从资源占用者手中夺取资源，资源只能由资源占用者主动释放。进程所获得的资源在未使用完毕之前，资源申请者不能强行的从资源占有者中夺取资源，而只能由该资源的占有者进程自行释放。
+3. 占用且等待条件：请求和保持，即当资源请求者在请求其他的资源的同时保持对原有资源的占用。进程至少已经占有了一个资源，但又申请了一个新的被其他进程所占用的资源，此时处于等待状态。
+4. 循环等待条件：即存在一个等待队列，P1 占用 P2 的资源，P2 占用 P3 的资源，P3 占用 P1 的资源。这样就形成了一个等待环路。若干个进程形成环形链，每个都占用对方申请的下一个资源。
 
 　　当上述四个条件都成立的时候，便形成死锁。当然，死锁的情况下如果打破上述任何一个条件，便可让死锁消失。
 
@@ -95,6 +100,40 @@ Tue Jun 09 18:57:25 CST 2020 LockA 锁住 obj1 LockTest.obj1:1
 　　此时死锁产生。
 
 ## 解决死锁
+
+　　为使系统不发生死锁，必须设法破坏产生死锁的四个必要条件之一，或者允许死锁产生，但当死锁发生时能检测出死锁，并有能力实现恢复。
+
+　　一般有死锁的预防、死锁避免、死锁检测与恢复三种方法。
+
+1. 死锁预防：破坏导致死锁必要条件中的任意一个就可以预防死锁。例如，要求用户申请资源时一次性申请所需要的全部资源，这就破坏了保持和等待的条件；将资源分层，得到上一层资源后，才能够申请下一层资源，它破坏了环路等待条件。预防通常会降低系统的效率。
+2. 死锁避免：避免时指进程在每次申请资源时判断这些操作是否安全。例如，使用银行家算法。死锁避免算法的执行会增加系统的开销。
+3. 死锁检测：死锁预防和避免都是事前措施，而死锁的检测则是判断系统是否处于死锁状态，如果是，则执行死锁解除策略。
+4. 死锁解除：这是与死锁检测结合使用的，它使用的方式就是剥夺，即将某进程所拥有的资源强行回收，分配给其他的进程。
+
+
+
+### 死锁预防
+
+* 打破互斥条件：允许进程同时访问资源（有些资源就是不可以同时访问的，无实用价值）。
+* 打破不可抢占条件：比如给进程设置优先级，高优先级的可以抢占资源（实现困难，降低系统性能）。
+
+
+
+### 死锁避免
+
+
+
+### 死锁检测
+
+
+
+### 死锁解除
+
+
+
+### 使用信号量解决死锁
+
+
 
 　　为了解决上面的死锁问题，不适用显式的去锁，用信号量去控制。
 
@@ -201,3 +240,5 @@ Tue Jun 09 19:02:17 CST 2020 LockA 锁住 obj2 UnLockTest.num2：c
 
 ## 参考文章
 1. [Java 实例 - 死锁及解决方法](https://www.runoob.com/java/thread-deadlock.html)
+2. [死锁的原因，条件和解决办法](https://www.jianshu.com/p/26881a1b9e30)
+3. [Java死锁的原因例子及解决方法](https://blog.csdn.net/lyabc123456/article/details/81060477)
