--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -204,6 +204,8 @@
    * Condition
    * 动态代理类 Proxy
    * CurrentHashMap
+   * 死锁
+   * 锁
    * threadLocal原理 - 已完成
    * volatile - 数据从主内存直接获取 - 已完成
    * synchronized - 同步 - 已完成
@@ -215,6 +217,8 @@
    * 查找算法
 6. 其他
    * Gradle
+   * 银行家算法
+   * 操作系统知识
    * 责任链模式 - 完成
 
 ## 后续
@@ -271,13 +275,15 @@
 
 20. java 读写文件的几种方式
 
-24. 泛型
+24. 泛型 - 已完成
 
 25. 反射
 
-26. 代理
+26. 代理 - 已完成
 
-27. 注解
+24. 注解
+
+25. 
 
 
 
